# deutsch_starke_verben

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DataProvider/: DataProvider.cpp  DataProvider.hpp
GUI/: MainFrame.cpp  MainFrame.hpp
GUI/ButtonPanel/: ButtonPanel.cpp  ButtonPanel.hpp
GUI/ButtonPanel/ChoiceButton/: ChoiceButton.cpp  ChoiceButton.hpp
GUI/ChoiceButton/: ChoiceButton.cpp  ChoiceButton.hpp
GUI/TranslationPanel/: TranslationPanel.cpp  TranslationPanel.hpp
static/: germany.xpm  icon.xpm
